FEAT section added + STYLE section style added

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body class="debug">
 
     <header>
-        <div class="container">
+        <div class="container-header">
 
             <div class="row row-cols-3">
                 <div class="col">logo</div>
@@ -31,6 +31,15 @@
         <section class="section-first">
             <div class="container-2">
                 <div class="col col-pink"></div>
+            </div>
+        </section>
+
+        <section class="section-second">
+            <div class="container">
+                <div class="row row-cols-2-first">
+                    <div class="col col-60"></div>
+                    <div class="col col-40"></div>
+                </div>
             </div>
         </section>
             
