--- a/index.html
+++ b/index.html
@@ -28,17 +28,26 @@
 
     <main>
         
-        <section class="section-first">
+        <section class="section-blue">
             <div class="container-2">
                 <div class="col col-pink"></div>
             </div>
         </section>
 
-        <section class="section-second">
+        <section class="section-white">
             <div class="container">
-                <div class="row row-cols-2-first">
+                <div class="row row-cols-2">
                     <div class="col col-60"></div>
                     <div class="col col-40"></div>
+                </div>
+            </div>
+        </section>
+
+        <section class="section-grey">
+            <div class="container">
+                <div class="row row-cols-2">
+                    <div class="col col-40"></div>
+                    <div class="col col-60"></div>
                 </div>
             </div>
         </section>
