--- a/index.html
+++ b/index.html
@@ -51,6 +51,15 @@
                 </div>
             </div>
         </section>
+
+        <section class="section-white">
+            <div class="container">
+                <div class="row row-cols-2">
+                    <div class="col col-60"></div>
+                    <div class="col col-40"></div>
+                </div>
+            </div>
+        </section>
             
         
     </main>
